# SOLOTTERY_V1

./: README.md
docs/: alternative_testnet_deployment_approaches.md  dev_log_alice_sprint2.md  dev_log_alice_sprint3.md  dev_log_bob_sprint2.md  dev_log_charlie_sprint2.md  development_timeline_sprint2_and_beyond.md  final_planning_report_and_recommendations.md  frontend_live_data_integration_plan.md  integrated_system_testing_strategy.md  project_log.md  project_overview.md  smart_contract_initialization_challenges.md  smart_contract_testnet_deployment_plan.md  solana_lottery_development_plan.md  sprint2_progress_report.md  sprint2_status_report.md  sprint3_plan.md  todo.md
solana_lottery_app/frontend/solana_lottery_frontend/: package.json  pnpm-lock.yaml  wrangler.toml
solana_lottery_app/frontend/solana_lottery_frontend/src/app/: layout.tsx  page.tsx
solana_lottery_app/frontend/solana_lottery_frontend/src/components/: LotteryStatusCard.tsx  ParticipantsList.tsx  PastLotteryResults.tsx  WalletConnectButton.tsx  WalletContextProvider.tsx
solana_lottery_app/frontend/solana_lottery_frontend/src/idl/: solana_lottery_contract.json
solana_lottery_app/rust_init_client/solana_lottery_init_client/: Cargo.toml
solana_lottery_app/rust_init_client/solana_lottery_init_client/src/: main.rs
solana_lottery_app/smart_contract/solana_lottery_contract/: Anchor.toml
solana_lottery_app/smart_contract/solana_lottery_contract/tests/: devnet_initialize_config.ts  devnet_start_round.ts  initializeConfigScript_InitializeConfig.ts  solana_lottery_contract.ts
(+4 files in other folders)
