[package]
name = "solana_lottery_init_client"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18.1"
solana-client = "1.18.1"
solana-program = "1.18.1"
spl-token = "4.0.0"
bs58 = "0.5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.75"

[features]
default = []

